Fixed text overlaying placeholder images. Fixed image overflow.

--- a/css/styles.css
+++ b/css/styles.css
@@ -66,5 +66,9 @@ hr {
 .image-container {
 }
 
+#marketing-copy img {
+    width: 100%;
+    height: 100%;
+}
 
 
